    from oyProjectManager import Project, Sequence, Shot, Asset

* Tests are now using in-memory database, which is way faster then the the file
  based version.

0.2.4.2
-------
* Renamed 'Scene Assembly' to 'Layout' in VersionTypes.

* Added support for Eyeon Fusion.

* Fixed Houdini environment.

* ``version_creator`` UI now lists users in alphabetical order.

0.2.4.1
-------
* Fixed titles of ``version_creator`` and ``status_manager`` UIs.

* Added screenshots to the documentation.

0.2.4
-----
* Added ``type`` attribute to the ``Asset`` class. The main intention is to
  be able to distinguish 'Props', 'Environment' etc. types of assets from each
  other.

* Added ``status`` attribute to the ``Version`` class. This attribute will help
  to track the status of the ``Asset`` or ``Shot`` version.

* Added a new UI called ``status_manager`` for viewing the Assets and Shots
  statuses.

* Added a new column to the ``version_creator`` UI which shows the status of
  the saved version.

* Added a new class called ``Client`` to manage ``Project`` clients.

* Added a new attribute ``client`` to the ``Project`` class to manage
  ``Client``s.

* Updated ``version_creator`` UI, it now shows the Shots in correct numerical
  order.

* Updated ``version_creator`` UI, it is now possible to change the Status or
  Browse the outputs of a Version by right clicking on the Previous Versions
  TableWidget.

* ``Version.status`` is now comparable with long status names, so comparing
  "WTS" with "Waiting To Start" will return True.

* Added the ``query`` method as a class method to the Base class in the
  declarativeBase which will let you do queries directly by using the class
  itself::
    
    # instead of doing this
    projs = db.query(Project).all()
    
    # you can do like this
    projs = Project.query().all()
    
    # To query for an Asset
    my_asset = Asset.query().filter(Asset.name=='test').first()
